--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -16,7 +16,7 @@
     <h3>Amount numbers: {{bill.amount_numbers}}</h3>
     <h3>Amounts letters: {{bill.amounts_letters}}</h3>
     <h3>Currency code: {{bill.currency_code}}</h3>
-    <h3>Date of issued: {{bill.date_of_issued}}</h3>
+    <h3>Date of issue: {{bill.date_of_issue}}</h3>
     <h3>Maturity date: {{bill.maturity_date}}</h3>
     <h3>Place of drawing: {{bill.place_of_drawing}}</h3>
     <h3>Place of payment: {{bill.place_of_payment}}</h3>
