--- a/templates/hbs/bills_list.html.hbs
+++ b/templates/hbs/bills_list.html.hbs
@@ -14,7 +14,7 @@
     <ul>
         {{#each bills}}
             <li><a href="http://localhost:8000/bill/{{this.name}}">{{ this.amount_numbers }} {{ this.currency_code }}
-                from {{ this.drawee_name }} issued {{ this.date_of_issued }}</a></li>
+                from {{ this.drawee_name }} issued {{ this.date_of_issue }}</a></li>
         {{/each}}
     </ul>
 </div>
