--- a/templates/hbs/new_bill.html.hbs
+++ b/templates/hbs/new_bill.html.hbs
@@ -20,8 +20,8 @@
         <input type="number" required="required" id="amount_numbers" name="amount_numbers"><br>
         <label>Currency code:</label><br>
         <input type="text" required="required" id="currency_code" name="currency_code" value="BTC" readonly><br>
-        <label>Date of issued:</label><br>
-        <input type="text" required="required" id="date_of_issued" name="date_of_issued" value="{{date_of_issued}}" readonly><br>
+        <label>Date of issue:</label><br>
+        <input type="text" required="required" id="date_of_issue" name="date_of_issue" value="{{date_of_issue}}" readonly><br>
         <label>Maturity date:</label><br>
         <input type="text" required="required" id="maturity_date" name="maturity_date" value="{{maturity_date}}" readonly><br>
         <label for="place_of_drawing">Place of drawing:</label><br>
