--- a/templates/hbs/footer.html.hbs
+++ b/templates/hbs/footer.html.hbs
@@ -4,5 +4,5 @@
     <link rel="stylesheet" href="http://localhost:8000/css/footer.css">
 </head>
 <nav class="footer">
-    <h3 id="rights">© 2023 Bitcredit. All rights reserved.</h3>
+    <a href="https://www.bitcr.org/"><h3 id="rights">© 2023 Bitcredit. All rights reserved.</h3></a>
 </nav>
