--- a/templates/hbs/new_bill.html.hbs
+++ b/templates/hbs/new_bill.html.hbs
@@ -11,27 +11,27 @@
     <div class="headline">
     <h1>Issue new bill</h1>
     </div>
-    <form action="http://localhost:8000/bill/issue" method="post">
+    <form class="fields_bill" action="http://localhost:8000/bill/issue" method="post">
         <label for="drawee_name">Drawee name:</label><br>
-        <input type="text" required="required" id="drawee_name" name="drawee_name"><br>
-        <label>Drawer name:</label><br>
-        <input type="text" required="required" id="drawer_name" name="drawer_name" value="{{identity.name}}" readonly><br>
+        <input type="text" required="required" id="drawee_name" name="drawee_name" placeholder="Drawee name"><br>
+        <label for="drawer_name">Drawer name:</label><br>
+        <input type="text" required="required" id="drawer_name" name="drawer_name" value="{{identity.name}}" placeholder="Drawer name" readonly><br>
         <label for="amount_numbers">Amount numbers:</label><br>
-        <input type="number" required="required" id="amount_numbers" name="amount_numbers"><br>
-        <label>Currency code:</label><br>
-        <input type="text" required="required" id="currency_code" name="currency_code" value="BTC" readonly><br>
-        <label>Date of issue:</label><br>
-        <input type="text" required="required" id="date_of_issue" name="date_of_issue" value="{{date_of_issue}}" readonly><br>
-        <label>Maturity date:</label><br>
-        <input type="text" required="required" id="maturity_date" name="maturity_date" value="{{maturity_date}}" readonly><br>
+        <input type="number" required="required" id="amount_numbers" name="amount_numbers" placeholder="Amount numbers"><br>
+        <label for="currency_code">Currency code:</label><br>
+        <input type="text" required="required" id="currency_code" name="currency_code" value="BTC" placeholder="Currency code" readonly><br>
+        <label for="date_of_issue">Date of issue:</label><br>
+        <input type="text" required="required" id="date_of_issue" name="date_of_issue" value="{{date_of_issue}}" placeholder="Date of issue" readonly><br>
+        <label for="maturity_date">Maturity date:</label><br>
+        <input type="text" required="required" id="maturity_date" name="maturity_date" value="{{maturity_date}}" placeholder="Maturity date" readonly><br>
         <label for="place_of_drawing">Place of drawing:</label><br>
-        <input type="text" required="required" id="place_of_drawing" name="place_of_drawing"><br>
-        <label>Place of payment:</label><br>
-        <input type="text" required="required" id="place_of_payment" name="place_of_payment" value="{{identity.postal_address}}" readonly><br>
+        <input type="text" required="required" id="place_of_drawing" name="place_of_drawing" placeholder="Place of drawing"><br>
+        <label for="place_of_payment">Place of payment:</label><br>
+        <input type="text" required="required" id="place_of_payment" name="place_of_payment" value="{{identity.postal_address}}" placeholder="Place of payment" readonly><br>
         <label for="bill_jurisdiction">Bill jurisdiction:</label><br>
-        <input type="text" required="required" id="bill_jurisdiction" name="bill_jurisdiction"><br>
+        <input type="text" required="required" id="bill_jurisdiction" name="bill_jurisdiction" placeholder="Bill jurisdiction"><br>
         <label for="language">Language:</label><br>
-        <input type="text" required="required" id="language" name="language"><br>
+        <input type="text" required="required" id="language" name="language" placeholder="Language"><br>
         <input type="submit" id="button_submit" value="Issue bill">
     </form>
 </div>
