--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -9,6 +9,7 @@
     <ul class="menu-main">
         <li><a href="http://localhost:8000/">Home</a></li>
         <li><a href="http://localhost:8000/bill">Issue new bill</a></li>
+        <li><a href="http://localhost:8000/bill/dht">Find bill</a></li>
         <li><a href="http://localhost:8000/identity">Identity</a></li>
         <li><a href="http://localhost:8000/bills">Bills</a></li>
         <li><a href="http://localhost:8000/info">Info</a></li>
