--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -9,8 +9,10 @@
     <ul class="menu-main">
         <li><a href="http://localhost:8000/">Home</a></li>
         <li><a href="http://localhost:8000/bill">Issue new bill</a></li>
-        <li><a href="http://localhost:8000/bill/dht">Find bill</a></li>
+        <li><a href="http://localhost:8000/contacts/add">Add contact</a></li>
+        <li><a href="http://localhost:8000/bill/dht">Find new bills</a></li>
         <li><a href="http://localhost:8000/identity">Identity</a></li>
+        <li><a href="http://localhost:8000/contacts">Contacts</a></li>
         <li><a href="http://localhost:8000/bills">Bills</a></li>
         <li><a href="http://localhost:8000/info">Info</a></li>
     </ul>
