--- a/templates/hbs/new_bill.html.hbs
+++ b/templates/hbs/new_bill.html.hbs
@@ -16,6 +16,8 @@
         <input type="text" required="required" id="drawee_name" name="drawee_name" placeholder="Drawee name"><br>
         <label for="drawer_name">Drawer name:</label><br>
         <input type="text" required="required" id="drawer_name" name="drawer_name" value="{{identity.name}}" placeholder="Drawer name" readonly><br>
+        <label for="holder_name">Holder name:</label><br>
+        <input type="text" required="required" id="holder_name" name="holder_name" value="{{identity.name}}" placeholder="Holder name" readonly><br>
         <label for="amount_numbers">Amount numbers:</label><br>
         <input type="number" required="required" id="amount_numbers" name="amount_numbers" placeholder="Amount numbers"><br>
         <label for="currency_code">Currency code:</label><br>
