--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -13,6 +13,7 @@
     </div>
     <h3>Drawer: {{bill.drawer_name}}</h3>
     <h3>Drawee: {{bill.drawee_name}}</h3>
+    <h3>Holder: {{bill.holder_name}}</h3>
     <h3>Amount numbers: {{bill.amount_numbers}}</h3>
     <h3>Amounts letters: {{bill.amounts_letters}}</h3>
     <h3>Currency code: {{bill.currency_code}}</h3>
@@ -23,6 +24,7 @@
     <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
     <h3>Language: {{bill.language}}</h3>
     <h3>Public key: {{bill.public_key_pem}}</h3>
+<!--blockchain-->
 </div>
 </body>
 <footer>
