--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -24,8 +24,16 @@
     <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
     <h3>Language: {{bill.language}}</h3>
     <h3>Public key: {{bill.public_key_pem}}</h3>
-<!--blockchain-->
+    <!--blockchain-->
 </div>
+<form class="fields_bill" action="http://localhost:8000/bill/endorse" method="post">
+    <label for="new_holder">New holder name:</label><br>
+    <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
+    <label for="bill_name">Drawer name:</label><br>
+    <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}" placeholder="Bill name"
+           readonly><br>
+    <input type="submit" id="button_submit" value="Endorse name">
+</form>
 </body>
 <footer>
     {{> hbs/footer}}
