--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bill info</title>
+  <title>Bill info</title>
 </head>
 <header>
-    {{> hbs/nav}}
+  {{> hbs/nav}}
 </header>
 <body>
 <div class="content">
-    <div class="headline">
-        <h1>Information about your bill {{bill.name}}</h1>
-    </div>
-    <h3>Drawer: {{bill.drawer_name}}</h3>
-    <h3>Drawee: {{bill.drawee_name}}</h3>
-    <h3>Holder: {{bill.holder_name}}</h3>
-    <h3>Amount numbers: {{bill.amount_numbers}}</h3>
-    <h3>Amounts letters: {{bill.amounts_letters}}</h3>
+  <div class="headline">
+    <h1>Information about your bill {{bill.name}}</h1>
+  </div>
+  <h3>Drawer: {{bill.drawer_name}}</h3>
+  <h3>Drawee: {{bill.drawee_name}}</h3>
+  <h3>Holder: {{bill.holder_name}}</h3>
+  <h3>Amount numbers: {{bill.amount_numbers}}</h3>
+  <h3>Amounts letters: {{bill.amounts_letters}}</h3>
   <h3>Currency code: {{bill.currency_code}}</h3>
   <h3>Date of issue: {{bill.date_of_issue}}</h3>
   <h3>Maturity date: {{bill.maturity_date}}</h3>
@@ -23,11 +23,9 @@
   <h3>Place of payment: {{bill.place_of_payment}}</h3>
   <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
   <h3>Language: {{bill.language}}</h3>
-  <h3>Public key: {{bill.public_key_pem}}</h3>
-  <!--blockchain-->
 </div>
 
-{{#if (eq str_peer_id bill.holder_name)}}
+{{#if (eq peer_id bill.holder_name)}}
   <form class="content" action="http://localhost:8000/bill/endorse" method="post">
     <label for="new_holder">New holder name:</label><br>
     <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
