--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -23,6 +23,7 @@
   <h3>Place of payment: {{bill.place_of_payment}}</h3>
   <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
   <h3>Language: {{bill.language}}</h3>
+  <h3>Operation code: {{operation_code}}</h3>
 </div>
 
 {{#if (eq peer_id bill.holder_name)}}
@@ -32,6 +33,14 @@
     <label for="bill_name">Bill name:</label><br>
     <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}" placeholder="Bill name" readonly><br>
     <input type="submit" id="button_submit" value="Endorse">
+  </form>
+{{/if}}
+
+{{#if (eq peer_id bill.holder_name)}}
+  <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+    <label for="bill_name">Bill name:</label><br>
+    <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}" placeholder="Bill name" readonly><br>
+    <input type="submit" id="button_submit" value="Request to accept">
   </form>
 {{/if}}
 </body>
