--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -24,44 +24,49 @@
     <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
     <h3>Language: {{bill.language}}</h3>
     <h3>Operation code: {{operation_code}}</h3>
+    {{#unless (eq address "")}}
+        < <h3>Address to pay: {{address}}</h3>
+    {{/unless }}
 </div>
 
 {{#if (eq peer_id bill.holder_name)}}
     <form class="content" action="http://localhost:8000/bill/endorse" method="post">
         <label for="new_holder">New holder name:</label><br>
         <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
-        <label for="bill_name">Bill name:</label><br>
-        <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+        <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                placeholder="Bill name" readonly><br>
         <input type="submit" id="button_submit" value="Endorse">
     </form>
     {{#if (eq operation_code codes.[2])}}
         <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-            <label for="bill_name">Bill name:</label><br>
-            <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                    placeholder="Bill name" readonly><br>
             <input type="submit" id="button_submit" value="Request to accept">
         </form>
     {{/if}}
     {{#if (eq operation_code codes.[0])}}
         <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-            <label for="bill_name">Bill name:</label><br>
-            <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                    placeholder="Bill name" readonly><br>
             <input type="submit" id="button_submit" value="Request to accept">
         </form>
     {{/if}}
+<!--    {{#if (eq operation_code codes.[4])}}-->
+<!--        <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">-->
+<!--            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"-->
+<!--                   placeholder="Bill name" readonly><br>-->
+<!--            <input type="submit" id="button_submit" value="Request to pay">-->
+<!--        </form>-->
+<!--    {{/if}}-->
 {{/if}}
 {{#if (eq peer_id bill.drawee_name)}}
     {{#if (eq operation_code codes.[3])}}
         <form class="content" action="http://localhost:8000/bill/accept" method="post">
-            <label for="bill_name">Bill name:</label><br>
-            <input type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                    placeholder="Bill name" readonly><br>
-            <label for="operation_code">Operation code:</label><br>
-            <input type="text" required="required" id="operation_code" name="operation_code"
-                   placeholder="Operation Code"><br>
-            <input type="submit" id="button_submit" value="Send">
+            <input hidden type="text" required="required" id="operation_code" name="operation_code" value="Accept"
+                   placeholder="Operation Code" readonly><br>
+            <input type="submit" id="button_submit" value="Accept">
         </form>
     {{/if}}
 {{/if}}
