--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -24,9 +24,9 @@
     <h3>Jurisdiction: {{bill.bill_jurisdiction}}</h3>
     <h3>Language: {{bill.language}}</h3>
     <h3>Operation code: {{operation_code}}</h3>
-    {{#unless (eq address "")}}
-        < <h3>Address to pay: {{address}}</h3>
-    {{/unless }}
+<!--    {{#unless (eq address "")}}-->
+<!--        <h3>Address to pay: {{address}}</h3>-->
+<!--    {{/unless }}-->
 </div>
 
 {{#if (eq peer_id bill.holder_name)}}
