--- a/templates/hbs/identity.html.hbs
+++ b/templates/hbs/identity.html.hbs
@@ -9,7 +9,7 @@
 <body>
 <div class="content">
     <div class="headline">
-        <h1>Identity information</h2>
+        <h2>Identity information</h2>
     </div>
     <h3>Name: {{identity.name}}</h3>
     <h3>Date of birth: {{identity.date_of_birth}}</h3>
@@ -18,7 +18,8 @@
     <h3>Email: {{identity.email}}</h3>
     <h3>Postal address: {{identity.postal_address}}</h3>
     <h3>Peer id: {{peer_id}}</h3>
-    <h3>Public key: {{identity.public_key_pem}}</h3>
+    <h3>Public key bitcoin: {{identity.bitcoin_public_key}}</h3>
+    <h3>Private key bitcoin: {{identity.bitcoin_private_key}}</h3>
 </div>
 </body>
 <footer>
