--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -26,37 +26,50 @@
     <h3>Operation code: {{operation_code}}</h3>
     <h3>Bill public key: {{bill.public_key}}</h3>
     <h3>Bill private key: {{bill.private_key}}</h3>
-
+    {{#unless (eq address_to_pay "")}}
+        <h3>Address to pay: {{address_to_pay}}</h3>
+    {{/unless}}
+    {{#unless (eq pr_key_bill "")}}
+        <h3>Private key from this address: {{pr_key_bill}}</h3>
+    {{/unless}}
 </div>
 
 {{#if (eq peer_id bill.holder_name)}}
-    <form class="content" action="http://localhost:8000/bill/endorse" method="post">
-        <label for="new_holder">New holder name:</label><br>
-        <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
-        <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-               placeholder="Bill name" readonly><br>
-        <input type="submit" id="button_submit" value="Endorse">
-    </form>
-    {{#if (eq operation_code codes.[2])}}
-        <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+    {{#unless ask_to_pay}}
+        <form class="content" action="http://localhost:8000/bill/endorse" method="post">
+            <label for="new_holder">New holder name:</label><br>
+            <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
             <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                    placeholder="Bill name" readonly><br>
-            <input type="submit" id="button_submit" value="Request to accept">
+            <input type="submit" id="button_submit" value="Endorse">
         </form>
+    {{/unless}}
+    {{#if (eq operation_code codes.[2])}}
+        {{#unless ask_to_pay}}
+            <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Request to accept">
+            </form>
+        {{/unless}}
     {{/if}}
     {{#if (eq operation_code codes.[0])}}
-        <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input type="submit" id="button_submit" value="Request to accept">
-        </form>
+        {{#unless ask_to_pay}}
+            <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Request to accept">
+            </form>
+        {{/unless}}
     {{/if}}
     {{#if confirmed}}
-        <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input type="submit" id="button_submit" value="Request to pay">
-        </form>
+        {{#unless ask_to_pay}}
+            <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Request to pay">
+            </form>
+        {{/unless}}
     {{/if}}
 {{/if}}
 {{#if (eq peer_id bill.drawee_name)}}
@@ -68,6 +81,15 @@
                    placeholder="Operation Code" readonly><br>
             <input type="submit" id="button_submit" value="Accept">
         </form>
+    {{/if}}
+    {{#if ask_to_pay}}
+        {{#unless payed}}
+            <form class="content" action="http://localhost:8000/bill/pay" method="post">
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Pay">
+            </form>
+        {{/unless}}
     {{/if}}
 {{/if}}
 </body>
