--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -30,7 +30,7 @@
         <h3>Address to pay: {{address_to_pay}}</h3>
     {{/unless}}
     {{#unless (eq pr_key_bill "")}}
-        <h3>Private key from this address: {{pr_key_bill}}</h3>
+        <h3>Private key to receive money: {{pr_key_bill}}</h3>
     {{/unless}}
 </div>
 
