--- a/templates/hbs/new_bill.html.hbs
+++ b/templates/hbs/new_bill.html.hbs
@@ -21,7 +21,7 @@
         <label for="amount_numbers">Amount numbers:</label><br>
         <input type="number" required="required" id="amount_numbers" name="amount_numbers" placeholder="Amount numbers"><br>
         <label for="currency_code">Currency code:</label><br>
-        <input type="text" required="required" id="currency_code" name="currency_code" value="BTC" placeholder="Currency code" readonly><br>
+        <input type="text" required="required" id="currency_code" name="currency_code" value="mBTC" placeholder="Currency code" readonly><br>
         <label for="date_of_issue">Date of issue:</label><br>
         <input type="text" required="required" id="date_of_issue" name="date_of_issue" value="{{date_of_issue}}" placeholder="Date of issue" readonly><br>
         <label for="maturity_date">Maturity date:</label><br>
