--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -11,9 +11,9 @@
     <div class="headline">
         <h1>Information about your bill {{bill.name}}</h1>
     </div>
-    <h3>Drawer: {{bill.drawer_name}}</h3>
-    <h3>Drawee: {{bill.drawee_name}}</h3>
-    <h3>Holder: {{bill.holder_name}}</h3>
+    <h3>Drawer: {{bill.drawer.name}}</h3>
+    <h3>Drawee: {{bill.drawee.name}}</h3>
+    <h3>Holder: {{bill.holder.name}}</h3>
     <h3>Amount numbers: {{bill.amount_numbers}}</h3>
     <h3>Amounts letters: {{bill.amounts_letters}}</h3>
     <h3>Currency code: {{bill.currency_code}}</h3>
@@ -32,10 +32,11 @@
     {{#unless (eq pr_key_bill "")}}
         <h3>Private key to receive money: {{pr_key_bill}}</h3>
     {{/unless}}
+    <h3>Payed: {{payed}}</h3>
 </div>
 
-{{#if (eq peer_id bill.holder_name)}}
-    {{#unless asked_to_pay}}
+{{#unless payed}}
+    {{#if (eq peer_id bill.holder_name)}}
         <form class="content" action="http://localhost:8000/bill/endorse" method="post">
             <label for="new_holder">New holder name:</label><br>
             <input type="text" required="required" id="new_holder" name="new_holder" placeholder="New holder name"><br>
@@ -43,55 +44,40 @@
                    placeholder="Bill name" readonly><br>
             <input type="submit" id="button_submit" value="Endorse">
         </form>
-    {{/unless}}
-    {{#if (eq operation_code codes.[2])}}
-        {{#unless asked_to_pay}}
+        {{#if (eq operation_code codes.[2])}}
             <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
                 <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                        placeholder="Bill name" readonly><br>
                 <input type="submit" id="button_submit" value="Request to accept">
             </form>
-        {{/unless}}
-    {{/if}}
-    {{#if (eq operation_code codes.[0])}}
-        {{#unless asked_to_pay}}
+        {{/if}}
+        {{#if (eq operation_code codes.[0])}}
             <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
                 <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                        placeholder="Bill name" readonly><br>
                 <input type="submit" id="button_submit" value="Request to accept">
             </form>
-        {{/unless}}
+        {{/if}}
+<!--        {{#if confirmed}}-->
+<!--            <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">-->
+<!--                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"-->
+<!--                       placeholder="Bill name" readonly><br>-->
+<!--                <input type="submit" id="button_submit" value="Request to pay">-->
+<!--            </form>-->
+<!--        {{/if}}-->
     {{/if}}
-    {{#if confirmed}}
-        {{#unless asked_to_pay}}
-            <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+    {{#if (eq peer_id bill.drawee_name)}}
+        {{#if (eq operation_code codes.[3])}}
+            <form class="content" action="http://localhost:8000/bill/accept" method="post">
                 <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                        placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Request to pay">
+                <input hidden type="text" required="required" id="operation_code" name="operation_code" value="Accept"
+                       placeholder="Operation Code" readonly><br>
+                <input type="submit" id="button_submit" value="Accept">
             </form>
-        {{/unless}}
+        {{/if}}
     {{/if}}
-{{/if}}
-{{#if (eq peer_id bill.drawee_name)}}
-    {{#if (eq operation_code codes.[3])}}
-        <form class="content" action="http://localhost:8000/bill/accept" method="post">
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input hidden type="text" required="required" id="operation_code" name="operation_code" value="Accept"
-                   placeholder="Operation Code" readonly><br>
-            <input type="submit" id="button_submit" value="Accept">
-        </form>
-    {{/if}}
-    {{#if asked_to_pay}}
-        {{#unless payed}}
-            <form class="content" action="http://localhost:8000/bill/pay" method="post">
-                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                       placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Pay">
-            </form>
-        {{/unless}}
-    {{/if}}
-{{/if}}
+{{/unless}}
 </body>
 <footer>
     {{> hbs/footer}}
