--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -11,6 +11,7 @@
     <div class="headline">
         <h1>Information about your bill {{bill.name}}</h1>
     </div>
+    <h3>Net: {{usednet}}</h3>
     <h3>Drawer name: {{bill.drawer.name}}</h3>
     <h3>Drawer peer id: {{bill.drawer.peer_id}}</h3>
     <h3>Drawer bitcoin public key: {{bill.drawer.bitcoin_public_key}}</h3>
