--- a/templates/hbs/identity.html.hbs
+++ b/templates/hbs/identity.html.hbs
@@ -11,6 +11,7 @@
     <div class="headline">
         <h2>Identity information</h2>
     </div>
+    <h3>Net: {{usednet}}</h3>
     <h3>Name: {{identity.name}}</h3>
     <h3>Date of birth: {{identity.date_of_birth}}</h3>
     <h3>City of birth: {{identity.city_of_birth}}</h3>
