--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -56,11 +56,13 @@
         </form>
     {{/unless}}
     {{#if (eq operation_code codes.[2])}}
-        <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input type="submit" id="button_submit" value="Request to accept">
-        </form>
+        {{#unless accepted}}
+            <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Request to accept">
+            </form>
+        {{/unless}}
     {{/if}}
     {{#if (eq operation_code codes.[0])}}
         <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
@@ -69,7 +71,7 @@
             <input type="submit" id="button_submit" value="Request to accept">
         </form>
     {{/if}}
-            <!--        {{#if confirmed}}-->
+            <!--        {{#if accepted}}-->
     <!--            <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">-->
     <!--                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"-->
     <!--                       placeholder="Bill name" readonly><br>-->
