--- a/templates/hbs/bill_history.html.hbs
+++ b/templates/hbs/bill_history.html.hbs
@@ -16,6 +16,7 @@
             <li>{{this}}</li>
         {{/each}}
     </ul>
+    <h3><a href="http://localhost:8000/bill/{{bill.name}}">Back</a></h3>
 </div>
 </body>
 <footer>
