--- a/templates/hbs/bills_list.html.hbs
+++ b/templates/hbs/bills_list.html.hbs
@@ -13,8 +13,7 @@
     </div>
     <ul>
         {{#each bills}}
-            <li><a href="http://localhost:8000/bill/{{this.name}}">{{ this.amount_numbers }} {{ this.currency_code }}
-                from {{ this.drawee_name }} issued {{ this.date_of_issue }}</a></li>
+            <li><a href="http://localhost:8000/bill/{{this.name}}">{{ this.amount_numbers }} {{ this.currency_code }} issued {{ this.date_of_issue }}</a></li>
         {{/each}}
     </ul>
 </div>
