--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -52,42 +52,70 @@
     <h3><a href="http://localhost:8000/bill/blockchain/{{bill.name}}">Chain</a></h3>
 </div>
 
-{{#if (eq peer_id bill.payee.peer_id)}}
-    {{#unless payed}}
-        <form class="content" action="http://localhost:8000/bill/endorse" method="post">
-            <label for="endorsee">Endorsee:</label><br>
-            <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input type="submit" id="button_submit" value="Endorse">
-        </form>
-    {{/unless}}
-    {{#if (eq operation_code codes.[2])}}
-        {{#unless accepted}}
-            <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                       placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Request to accept">
-            </form>
-        {{/unless}}
-    {{/if}}
-    {{#if (eq operation_code codes.[0])}}
+{{#unless endorsed}}
+    {{#if (eq peer_id bill.payee.peer_id)}}
         {{#unless payed}}
-            <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+            <form class="content" action="http://localhost:8000/bill/endorse" method="post">
+                <label for="endorsee">Endorsee:</label><br>
+                <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
                 <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
                        placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Request to accept">
+                <input type="submit" id="button_submit" value="Endorse">
             </form>
         {{/unless}}
+        {{#if (eq operation_code codes.[2])}}
+            {{#unless accepted}}
+                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Request to accept">
+                </form>
+            {{/unless}}
+        {{/if}}
+        {{#if (eq operation_code codes.[0])}}
+            {{#unless payed}}
+                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Request to accept">
+                </form>
+            {{/unless}}
+        {{/if}}
     {{/if}}
-            <!--        {{#if accepted}}-->
-    <!--            <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">-->
-    <!--                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"-->
-    <!--                       placeholder="Bill name" readonly><br>-->
-    <!--                <input type="submit" id="button_submit" value="Request to pay">-->
-    <!--            </form>-->
-            <!--        {{/if}}-->
+{{/unless}}
+
+{{#if endorsed}}
+    {{#if (eq peer_id bill.endorsee.peer_id)}}
+        {{#unless payed}}
+            <form class="content" action="http://localhost:8000/bill/endorse" method="post">
+                <label for="endorsee">Endorsee:</label><br>
+                <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
+                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                       placeholder="Bill name" readonly><br>
+                <input type="submit" id="button_submit" value="Endorse">
+            </form>
+        {{/unless}}
+        {{#if (eq operation_code codes.[2])}}
+            {{#unless accepted}}
+                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Request to accept">
+                </form>
+            {{/unless}}
+        {{/if}}
+        {{#if (eq operation_code codes.[0])}}
+            {{#unless payed}}
+                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Request to accept">
+                </form>
+            {{/unless}}
+        {{/if}}
+    {{/if}}
 {{/if}}
+
 {{#if (eq peer_id bill.drawee.peer_id)}}
     {{#if (eq operation_code codes.[3])}}
         <form class="content" action="http://localhost:8000/bill/accept" method="post">
