--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -45,8 +45,16 @@
         {{#unless (eq pr_key_bill "")}}
             <h3>Private key to receive money: {{pr_key_bill}}</h3>
         {{/unless}}
+        {{#unless (eq pending "")}}
+            <h3>Payed: {{pending}}</h3>
+        {{/unless}}
+        {{#if (eq pending "")}}
+            <h3>Payed: {{payed}}</h3>
+        {{/if}}
     {{/if}}
-    <h3>Payed: {{payed}}</h3>
+    {{#unless payed}}
+        <h3>Payed: {{payed}}</h3>
+    {{/unless}}
     <h3>Accepted: {{accepted}}</h3>
     <h3><a href="http://localhost:8000/bill/history/{{bill.name}}">History</a></h3>
     <h3><a href="http://localhost:8000/bill/blockchain/{{bill.name}}">Chain</a></h3>
