--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -15,5 +15,6 @@
         <li><a href="http://localhost:8000/contacts">Contacts</a></li>
         <li><a href="http://localhost:8000/bills">Bills</a></li>
         <li><a href="http://localhost:8000/info">Info</a></li>
+        <li><a href="http://localhost:8000/exit">Exit</a></li>
     </ul>
 </nav>
