--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -8,7 +8,7 @@
 <img id="navbar-logo" src="http://localhost:8000/image/logo_long_blackback.png" alt="logo">
     <ul class="menu-main">
         <li><a href="http://localhost:8000/">Home</a></li>
-        <li><a href="http://localhost:8000/bill">Issue new bill</a></li>
+        <li><a href="http://localhost:8000/issue_bill/">Issue new bill</a></li>
         <li><a href="http://localhost:8000/contacts/add">Add contact</a></li>
         <li><a href="http://localhost:8000/bill/dht">Find new bills</a></li>
         <li><a href="http://localhost:8000/identity">Identity</a></li>
