--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -9,6 +9,8 @@
     <ul class="menu-main">
         <li><a href="http://localhost:8000/">Home</a></li>
         <li><a href="http://localhost:8000/issue_bill/">Issue new bill</a></li>
+        <li><a href="http://localhost:8000/new_two_party_bill_drawer_is_payee/">Issue new 2-party bill drawer is payee</a></li>
+        <li><a href="http://localhost:8000/new_two_party_bill_drawer_is_drawee/">Issue new 2-party bill drawer is drawee</a></li>
         <li><a href="http://localhost:8000/contacts/add">Add contact</a></li>
         <li><a href="http://localhost:8000/bill/dht">Find new bills</a></li>
         <li><a href="http://localhost:8000/identity">Identity</a></li>
